Fix deprecated Redis property prefix, JWT secret prod fallback, and finish pending tenant-model refactor
- spring.redis.* -> spring.data.redis.* in application-prod.yml (Boot 3.x
  current prefix; block is currently inert, no starter/connection factory
  wired up yet, left in place for when it is).
- jwt.secret no longer has an insecure fallback default in the shared base
  application.yml (was silently reusable in prod); dev/hProd keep their own
  local-only fallback, prod now requires the env var explicitly - matches
  auth-service's pattern for the same shared signing key.
- Relocated the orphaned "v2" constraint/data-cleanup SQL script to
  src/main/resources/db/manual/V2__align_tenant_type_access_level_values.sql
  with a header explaining it's manual (ddl-auto doesn't add CHECK
  constraints or backfill data, Flyway is disabled platform-wide).
- Restored two Helm chart files that were about to be deleted with no
  replacement (_helpers.tpl and service.yaml) - _helpers.tpl's template
  definitions are used by deployment.yaml/ingress.yaml/hpa.yaml/
  job-flyway.yaml, and service.yaml is what ingress.yaml routes to;
  deleting them would have broken the whole chart.
- Restored the deleted contextLoads smoke test to match HEAD (needs a live
  local Postgres to actually run, same as before).
- Carried forward the rest of the in-progress refactor: TenantType/
  TenantAccessLevel moved to the shared common module, real @PreAuthorize
  RBAC on TenantController, SecurityConfig's empty stub removed in favor of
  iiotedge-security-starter's auto-configuration, parent POM switched to
  the local relative-path chain (matching auth-service's setup).
- .gitignore: exclude .DS_Store. README: document endpoints and config.